--- a/lib/sass/reset.css
+++ b/lib/sass/reset.css
@@ -4,6 +4,7 @@
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/700.css';
 @import '@fontsource/roboto/900.css';
+@import "scrollbar.css";
 
 :root {
     font-size: 1em;
@@ -11,8 +12,17 @@
 }
 
 html {
+    --clr-scheme: light;
+}
+
+html.dark {
+    --clr-scheme: dark;
+}
+
+
+html {
     overflow: hidden;
-    color-scheme: light dark;
+    color-scheme: var(--clr-scheme);
     background-color: var(--bg0);
     color: rgb(var(--clr-default));
     font-family: 'Roboto', sans-serif;
@@ -59,66 +69,6 @@ input:-webkit-autofill:active {
         caret-color: white;
         -webkit-text-fill-color: #ffffff;
         box-shadow: inset 0 0 50px 50px theme('colors.gray.900/0.8');
-    }
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: theme('colors.gray.400');
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: theme('colors.gray.500');
-}
-
-::-webkit-scrollbar-track {
-    background: theme('colors.gray.300');
-}
-
-.dark {
-    ::-webkit-scrollbar-thumb {
-        background: theme('colors.gray.600');
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-        background: theme('colors.gray.700');
-    }
-
-    ::-webkit-scrollbar-track {
-        background: theme('colors.gray.800');
-    }
-}
-
-.scrollbar-thin {
-    scrollbar-width: thin;
-    --w: 25%;
-    --hover: theme('colors.gray.400');
-    --from: theme('colors.gray.200');
-    --to: theme('colors.gray.300');
-
-    .dark & {
-        --hover: theme('colors.gray.500');
-        --from: theme('colors.gray.800');
-        --to: theme('colors.gray.700');
-    }
-
-    &::-webkit-scrollbar {
-        width: 8px;
-    }
-
-    &::-webkit-scrollbar-track {
-        background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 var(--w), var(--from) var(--w), var(--from) 100%);
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 var(--w), var(--to) var(--w), var(--to) 100%);
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-        background: var(--hover) 25%;
     }
 }
 
