--- a/lib/sass/scrollbar.css
+++ b/lib/sass/scrollbar.css
@@ -30,31 +30,36 @@
 }
 
 .scrollbar-thin {
-    scrollbar-width: thin;
-    --w: 25%;
-    --hover: theme('colors.gray.400');
-    --from: theme('colors.gray.200');
-    --to: theme('colors.gray.300');
+    /*scrollbar-width: thin;*/
+    /*--w: 25%;*/
+    /*--hover: theme('colors.gray.400');*/
+    /*--from: theme('colors.gray.200');*/
+    /*--to: theme('colors.gray.300');*/
 
-    .dark & {
-        --hover: theme('colors.gray.500');
-        --from: theme('colors.gray.800');
-        --to: theme('colors.gray.700');
-    }
+}
 
-    &::-webkit-scrollbar {
-        width: 8px;
-    }
+.scrollbar-thin::-webkit-scrollbar {
+    width: 8px;
+}
 
-    &::-webkit-scrollbar-track {
-        background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 var(--w), var(--from) var(--w), var(--from) 100%);
-    }
+.scrollbar-thin::-webkit-scrollbar-track {
+    background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 25%, theme('colors.gray.200') 25%, theme('colors.gray.200') 100%);
+}
+.dark .scrollbar-thin::-webkit-scrollbar-track {
+    background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 25%, theme('colors.gray.800') 25%, theme('colors.gray.800') 100%) !important;
+}
 
-    &::-webkit-scrollbar-thumb {
-        background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 var(--w), var(--to) var(--w), var(--to) 100%);
-    }
+.scrollbar-thin::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 25%, theme('colors.gray.300') 25%, theme('colors.gray.300') 100%);
+}
+.dark .scrollbar-thin::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg, #ffffff00 0%, #ffffff00 25%, theme('colors.gray.700') 25%, theme('colors.gray.700') 100%) !important;
+}
 
-    &::-webkit-scrollbar-thumb:hover {
-        background: var(--hover) 25%;
-    }
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+    background: theme('colors.gray.400') 25%;
+}
+
+.dark .scrollbar-thin::-webkit-scrollbar-thumb:hover {
+    background: theme('colors.gray.500') 25%;
 }
